[project]
name = "langchain-agent-demo"
version = "0.1.0"
description = "LangChain agent demos: AI Chef and Weather Agent with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.21",
    "flask>=3.1.3",
    "gradio>=6.17.3",
    "langchain>=1.3.6",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.3",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.29",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.30.0",
]
